[project]
name = "proj"
version = "0.1.0"
description = "web端js逆向分析"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "curl-cffi>=0.13.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.116.1",
    "gmssl>=3.2.2",
    "mmh3>=5.2.0",
    "pillow>=11.3.0",
    "pyexecjs>=1.5.1",
    "user-agents>=2.2.0",
    "pycryptodome>=3.23.0",
    "rich>=13.6.0",
    "pylint>=3.3.8",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
